# extenscan

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: cache.rs  config.rs  lib.rs  main.rs  platform.rs
src/checker/: extension_risk.rs  mod.rs  osv.rs  version.rs
src/model/: mod.rs  package.rs  vulnerability.rs
src/output/: cli.rs  cyclonedx.rs  html.rs  json.rs  mod.rs  sarif.rs
src/scanner/: arc.rs  brave.rs  chrome.rs  chromium.rs  edge.rs  firefox.rs  homebrew.rs  mod.rs  npm.rs  opera.rs  vivaldi.rs  vscode.rs
