[package]
name = "extenscan"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
description = "Cross-platform scanner for installed extensions and packages"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Version handling
semver = { version = "1", features = ["serde"] }

# Cross-platform paths
dirs = "5"

# Directory traversal
walkdir = "2"

# CLI output
tabled = "0.17"
indicatif = "0.17"

# Config
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async trait
async-trait = "0.1"

# Async utilities
futures = "0.3"

[dev-dependencies]
tempfile = "3"
